# hello-world

./: .gitattributes  README.md
hello-elixir-interoperability/: LICENSE  Makefile  README.md  mix.exs
hello-elixir-interoperability/config/: config.exs  prod.exs
hello-elixir-interoperability/lib/: hello_elixir_interoperability.ex
hello-elixir-interoperability/lib/hello_elixir_interoperability/: application.ex
hello-elixir-rustler/: .gitignore  README.md  mix.exs
hello-elixir-rustler/lib/: hello_elixir_rustler.ex
hello-elixir-rustler/lib/hello_elixir_rustler/: rustler_nif.ex
hello-elixir-rustler/native/helloelixirrustler_rustlernif/: Cargo.toml  README.md
hello-elixir-rustler/test/: hello_elixir_rustler_test.exs
hello-erlang-autoconf/: .gitignore  Makefile.am  README  README.md  configure.ac
hello-erlang-autoconf/src/: .gitignore  Makefile.am  hello.app.src  hello.erl  hello_app.erl  hello_sup.erl
hello-erlang-autoconf/sys/: .gitignore  Makefile.am  hello.config  hello.otp.system  hello.rel.in  hello.start.in  hello.stop.in
hello-erlang-c-node/: LICENSE  README.md
hello-erlang-interoperability/: README.md  rebar.config
hello-erlang-interoperability/c_src/: Makefile  port_driver.c
hello-erlang-interoperability/config/: vm.args
hello-erlang-interoperability/src/: hello-erlang-interoperability.app.src  hello-erlang-interoperability.erl  hello-erlang-interoperability_app.erl  hello-erlang-interoperability_sup.erl
hello-http-server/: Makefile  README.md  oe-logs  oe-workdir  rebar.config
hello-http-server/config/: sys.config  vm.args
hello-http-server/include/: hhs.hrl  hhs_internal.hrl
hello-http-server/priv/templates/: base.html  login.html
hello-http-server/src/: hello_http_server.app.src  hhs_app.erl  hhs_sup.erl  hhs_user_server.erl
hello-http-server/src/web/: hhs_account.erl  hhs_common.erl  hhs_index.erl  hhs_login.erl  hhs_logout.erl  hhs_main.erl  hhs_register.erl  hhs_system.erl  nitrogen_main_handler.erl  web_404.erl
hello-http-server/static/css/: style.css
hello-phoenix/: .gitignore  README.md  mix.exs
hello-phoenix/config/: config.exs  dev.exs  prod.exs  prod.secret.exs  test.exs
hello-phoenix/lib/: hello_phoenix_web.ex
hello-phoenix/lib/hello_phoenix/: application.ex
hello-phoenix/lib/hello_phoenix_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
hello-phoenix/lib/hello_web/: endpoint.ex
hello-phoenix/test/support/: channel_case.ex  conn_case.ex
hello-rabbitmq/: README.md
hello-scenic/: mix.exs
hello-scenic/config/: config.exs
hello-scenic/lib/: assets.ex
hello-scenic/lib/components/: nav.ex  notes.ex
(+19 files in other folders)
